--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/xlsx": "^0.0.35",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
